frontend/test/should_pass/rewriteparametereval.gm
node class X { x : string; }
