frontend/test/should_fail/attrib_model_002.gm
node class test1 {
  x:String;
}

node class test2 {
  y:string;
}

node class test3 {
  z:mampf;
}
